// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> should adopt the "animate" property 1`] = `
.c0 {
  opacity: 1;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-area: mainContent;
    grid-template-areas: 'pageHeader' 'pageContent';
  }
}

<div
  className="c0"
/>
`;

exports[`<Wrapper /> should render and match the snapshot 1`] = `
.c0 {
  opacity: 0;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-name: bcCCNc;
  animation-name: bcCCNc;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-area: mainContent;
    grid-template-areas: 'pageHeader' 'pageContent';
  }
}

<div
  className="c0"
/>
`;
